# DPT

./: .gitignore  EVALUATION.md  README.md  demo.py  export_monodepth_onnx.py  export_segmentation_onnx.py  kitti_nyu_test.py  requirements.txt  run.py  run_monodepth.py  run_monodepth_onnx.py  run_segmentation.py  run_segmentation_onnx.py  setup.py  utils.py
dpt/: base_model.py  blocks.py  midas_net.py  midas_net_custom.py  models.py  vit.py
midas/: base_model.py  blocks.py  midas_net.py  midas_net_custom.py  vit.py
src/: CMakeLists.txt  main.cpp  run.sh
util/: io.py  misc.py
